docs: fix dangling references left by the JDK25/cleanup commits; align add-opens lists
The chore commits that removed zed/ and the LIFT_HTTP4S_MIGRATION*.md
tracker docs left five dangling references (README's ZED IDE section,
CLAUDE.md x2, release_notes.md, ideas/lift_mapper_in_the_future.md x2)
and a stale 4-shard CI table in CLAUDE.md describing a layout this PR
replaced with 9 shards. Update them to reflect the current state
instead of pointing at removed files.

Also close the gap between the surefire test-JVM argLine and the
shaded-jar manifest's Add-Opens: the argLine was missing
java.util.concurrent (the module a0a20ac5a added to fix a Redis
serialization crash in production) and the manifest was missing
java.security, so tests and production ran under different module
access. Align both to the union and cross-reference them so future
edits to one are a prompt to check the other.

.github/Dockerfile_PreBuild keeps its own explicit --add-opens flags
as-is: that combination is what's actually verified against the K8s
deployment (per k8s_Grafana/STATUS.md), so it isn't collapsed into
the manifest-only approach here.